name: error-analyze
version: 0.0.1
cabal-version: >=1.12
build-type: Simple
license: BSD3
synopsis: Parse ghc and cabal error messages and give their causes for easier resolution
maintainer: jp@moresmau.fr
stability: experimental


library
    exposed-modules:
        Language.Haskell.ErrorAnalyze
    build-depends:
        base <5, text
    default-language: Haskell98
    hs-source-dirs: src
    ghc-options: -ferror-spans -Wall

test-suite test-error-analyze
    type: exitcode-stdio-1.0
    main-is: Main.hs
    build-depends:
        base <5,
        error-analyze -any,
        tasty >0.10,
        tasty-hunit -any,
        HUnit -any,
        text
    default-language: Haskell98
    hs-source-dirs: test
    ghc-options: -ferror-spans -Wall
